--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <label for="login"></label>
           <input type="submit" value="login" name="login" class="btn-login" />
           <!-- </form> -->
-          <a href="/Cadastro-IMC/index.html" class="criar">Criar conta</a>
+          <a href="/cadastro-IMC/index.html" class="criar">Criar conta</a>
         </div>
       </div>
     </div>
